1.5.3
Update the mod for MCPE 1.0.2
Add Blocks back

1.5.2
Add the Recipes back
Updated Korean translations(Thanks to Johnmacrocraft)
Remive the blocks because they are causing crashes on some devices

1.5.1
Add chinese translations (Thanks to [Twitter]@model_part)
Fix Item and Block Names
Fix some problems with the Emerald Tools
Remove Emerald Mod version from main screen, becuase it was causing lag 

﻿1.5.0
Update for MCPE 1.0
New app icon
Add Emerald Fence
Change Emerald Rod to Emerald Stick
Improve Emerald Shovel, Pickaxe and Pax code

1.4.5
New: added back support for x86 devices
Improved: optimised code
Improved: Emerald Bow
Improved: updated portughese translations
Improved support with other mods
Fixed: Emerald Slab Recipe
Fixed crash when opening crafting table
Fixed Emerald Bow crashes in most cases
Fixed some other crashes
Removed: Emerald Apple(will be probaly added back in 1.5)
Removed: Emerald Beef

1.4.4
Improved:
-improved a lot Emerald Slabs
Fixed:
-crash when opening the app
-Emerald Slab

1.4.3
New:
-added Emerald Bow(is not ready)
-support for 0.14.2
Changed/Improved:
-Emerald Pickaxe and Shovel code
-Flint and Emerald now works like Flint and Steel
-Changed Emerald Slab Id
-removed Emerald Huts(will be added back in future updates)
Fixed:
-emerald blocks were not added to creative inventory

1.4.2
Improved:
-a lot Emerald Huts
-updated Korean translations
Changed:
-lowered all items durability to 1800
Fixed:
-emerald blocks recipes
-rate button

1.4.1
New:
-added Korean translations
Improved:
-the Flint and Emerald now works like a Flint and Steel when dispensed
Fixed:
-hide app button

1.4
New:
-Emerald Rod and Emerald Dust have now an use
-added Emerald Double Slab(has no use)
-added Emerald Beef
-added German and Portughese(Brazilia) translations for the mod
Changed/Improved:
-changed main screen
-updated for Minecraft 0.14.1
-completly changed Super Emerald Sword
-changed Emerald Brick and Plank recipe
-better x86 support