@@ -18,6 +18,4 @@ item.emeraldHoe.name=Smaragdhacke
 item.flintAndEmerald.name=Feuerstein und Smaragd
 item.emeraldBow.name=Smaragdbogen
 item.emeraldStick.name=Smaragdrute
-item.emeraldDust.name=Smaragdstaub
-item.emeraldApple.name=Smaragdapfel
 
