@@ -23,6 +23,5 @@ item.emeraldHoe.name=Emerald Hoe
 item.flintAndEmerald.name=Flint and Emerald
 item.emeraldBow.name=Emerald Bow
 item.emeraldStick.name=Emerald Stick
-item.emeraldDust.name=Emerald Dust
-item.emeraldApple.name=Emerald Apple
+item.emeraldNugget.name=Emerald Nugget
 
