@@ -18,6 +18,4 @@ item.emeraldHoe.name=에메랄드 괭이
 item.flintAndEmerald.name=에메랄드 라이터
 item.emeraldBow.name=에메랄드 활
 item.emeraldStick.name=에메랄드 막대﻿
-item.emeraldDust.name=에메랄드 가루
-item.emeraldApple.name=에메랄드 사과
 
