@@ -19,6 +19,4 @@ item.emeraldHoe.name=Enxada de Esmeralda
 item.flintAndEmerald.name=Isqueiro de Esmeralda
 item.emeraldBow.name=Arco de Esmeralda
 item.emeraldStick.name=Graveto de Esmeralda
-item.emeraldDust.name=Po de Esmeralda
-item.emeraldApple.name=Maça de Esmeralda
 
