@@ -19,6 +19,4 @@ item.emeraldHoe.name=绿宝石锄
 item.flintAndEmerald.name=绿宝石和燧石
 item.emeraldBow.name=绿宝石弓
 item.emeraldStick.name=绿宝石棍
-item.emeraldDust.name=绿宝石粉
-item.emeraldApple.name=绿宝石苹果
 
